--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/logo4.png" type="image/x-icon">
   <meta name="description" content="">
-  <title>Home</title>
+  <title>Contact</title>
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -38,7 +38,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for contacting me!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="IHIYsr9tYXu8ChpC/Q2+mth7hbdK1Sz84izPYQx1iTuiRGF1wnXB/+VGS/VOXM1bL2772FM8a/dxDEXBkQhZNQx2pQRAC6MQSh3ZrKpRxuNtWgNxRUM/8m85njRs+z2y" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="3Q+dsI/AuvM33ReIQwjOAs85cRkX4jbB2nKQvPfXcKxGpUO/oAj0SYGjE/3HKn6hINJuFKXctp3Dk42GlLarvKQtaAD8JXhk7N/vHLZVF5vTrSi1iZY5AHogvha7Rx93" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -69,7 +69,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.me/z">best free website templates</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.me/u">bootstrap website templates</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
